manifests/base/keycloak/service/deployment.yaml
#
# Copyright (c) 2025 Red Hat Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-service
  template:
    metadata:
      labels:
        app: keycloak-service
    spec:
      volumes:
      - name: realm
        configMap:
          name: keycloak-realm
      - name: database-client-cert
        secret:
          secretName: keycloak-database-client-cert
      - name: tls-cert
        secret:
          secretName: keycloak-tls-cert
      containers:
      - name: keycloak
        image: keycloak
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: realm
          mountPath: /opt/keycloak/data/import
          readOnly: true
        - name: database-client-cert
          mountPath: /secrets/database-client
          readOnly: true
        - name: tls-cert
          mountPath: /secrets/tls
          readOnly: true
        args:
        - start
        - --import-realm
        ports:
        - name: https
          containerPort: 8001
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8001
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /realms/master
            port: 8001
            scheme: HTTPS
          initialDelaySeconds: 60
          periodSeconds: 30
